function tasks added

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <button onclick="alert('Mama')">Click me</button>
 
 
-    <script src="JS/yes.js"></script>
-    <script src="JS/basic.js"></script>
+    <script src="yes.js"></script>
+    <script src="basic.js"></script>
   </body>
 </html>
