--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       }
 
       button:disabled {
-        cursor: not-allowed;
+        cursor: not-allowed
       }
     </style>
   </head>
@@ -100,7 +100,7 @@
           li.remove();
         });
 
-        review.appendChild(li);
+          review.appendChild(li);
 
         document.getElementById("textValue").value = "";
       };
